Working version for Gen7-LPC1114

--- a/target_lpc1114/Makefile
+++ b/target_lpc1114/Makefile
@@ -53,7 +53,7 @@ endif
 PROJECT = target1
 
 # Imported source files
-CHIBIOS = c:/github/chibios/
+CHIBIOS = ../ChibiOS/
 APP = ../app
 
 include board.mk
