--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/abcminiuser/lufa-lib.git
 [submodule "ChibiOS"]
 	path = ChibiOS
-	url = https://github.com/mabl/ChibiOS.git
+	url = https://github.com/bobc/ChibiOS.git
